// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` Body Text render Render body test correctly 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#282828",
        "display": "flex",
        "fontSize": 16,
        "lineHeight": 20,
      },
    ]
  }
>
  Body variant
</Text>
`;

exports[` Caption Text render Render caption test correctly 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#7F8183",
        "display": "flex",
        "fontSize": 14,
        "lineHeight": 18,
      },
    ]
  }
>
  Caption variant
</Text>
`;

exports[` Default Text render Render default test correctly 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#282828",
        "display": "flex",
        "fontSize": 16,
        "lineHeight": 20,
      },
    ]
  }
>
  Default variant
</Text>
`;

exports[` h1 Text render Render h1 test correctly 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#282828",
        "display": "flex",
        "fontSize": 32,
        "lineHeight": 38,
      },
    ]
  }
>
  H1 variant
</Text>
`;

exports[` h2 Text render Render h2 test correctly 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#282828",
        "display": "flex",
        "fontSize": 24,
        "lineHeight": 30,
      },
    ]
  }
>
  H2 variant
</Text>
`;

exports[` h3 Text render Render h3 test correctly 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#282828",
        "display": "flex",
        "fontSize": 16,
        "lineHeight": 24,
      },
    ]
  }
>
  H3 variant
</Text>
`;
